--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,7 @@ jobs:
         cd my-app
         npm start &
         npx wait-on --timeout 60000
+    - name: Run visual tests 🏯
+      run: |
+        cd my-app
+        npm run test:visual
